Add Google webmaster verification

--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ social:
 
 # Site Verification Settings
 webmaster_verifications:
-  google: # fill in your Google verification code
+  google: CI4nASIkux3CVbI-vzsxIbvuPBeo7RRxENZt-ml625A # fill in your Google verification code
   bing: # fill in your Bing verification code
   alexa: # fill in your Alexa verification code
   yandex: # fill in your Yandex verification code
