--- a/_config.yml
+++ b/_config.yml
@@ -152,6 +152,14 @@ paginate: 10
 # The base URL of your site
 baseurl: ""
 
+# My custom settings
+defaults:
+  - 
+    scope: 
+      path: ""
+    values:
+      math: true
+
 # ------------ The following options are not recommended to be modified ------------------
 
 kramdown:
